--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 }
 body{
     background-color: beige;
-    /* class="bg-gray-100 text-gray-800"*/
-    
+    /* class="bg-gray-100 text-gray-800"*/    
     padding: 2.5rem;
     max-width: 48rem;
     margin-left: auto;
@@ -16,4 +15,30 @@ body{
     box-sizing: border-box;
     border-width: 0;
     border-style: solid;
+}
+div.pie{
+    text-align: center;   
+    margin-top: 2.5rem; 
+    box-sizing: border-box;
+    border-width: 0;
+    border-style: solid;
+}
+.pie-linea{    
+    margin: 0;
+    height: 0;
+    color: inherit;
+    border-top-width: 60px;
+    box-sizing: border-box;
+    border-width: 0;
+    border-style: solid;
+    color: #050505;
+}
+.pie-pagina-centro{    
+    justify-content: center;
+    flex-wrap: wrap;
+    display: flex;
+    box-sizing: border-box;
+    border-width: 0;
+    border-style: solid;
+    border-color: #e5e7eb;
 }
