--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body {
     font-size: 3.6rem;
     margin-bottom: 1rem;
 }
-.about-contenido h2 span {
+span {
     color: var(--main-color);
 }
 .about-contenido h3 {
@@ -149,7 +149,7 @@ body {
     color: var(--color-texto);
     margin: 1rem 0 1rem;
 }   
-.about-contenido a {
+.btn {
     display: inline-block;
     background-color: var(--main-color);
     color: var(--color-fondo);
@@ -163,11 +163,44 @@ body {
     transition: 0.5s ease;
     margin-top: 2rem;
 }
-.about-contenido a:hover {
+.btn:hover {
     box-shadow: none;
 }
 
-
+.servicios {
+    padding: 5rem 9%;
+    text-align: center;
+}
+.servicios h2 {
+    font-size: 3.6rem;
+    margin-bottom: 3rem;
+}
+.servicios-contenido {
+    display: flex;
+    justify-content: center;    
+}
+.servicio-box {
+    background-color: var(--color-secundario);
+    padding: 3rem;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    margin: 0 2rem;
+    transition: transform 0.3s ease;
+    width: 30rem;
+}
+.servicio-box i {
+    font-size: 4rem;
+    color: var(--main-color);
+}
+.servicio-box h3 {
+    font-size: 2.4rem;
+    margin: 1.5rem 0;
+}
+.servicio-box p {
+    font-size: 1.6rem;
+    line-height: 1.5;
+    color: var(--color-texto);
+    margin: 1rem 0 1rem;
 
 /* Estilos generales para el selector de idioma */
 
